--- a/templates/reportes/layout.html
+++ b/templates/reportes/layout.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="/">ASO</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="/">Inicio</a>
                     </li>
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid" style="max-width: 80%;">
         {% block content %}{% endblock %}
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
