--- a/templates/logs_view.html
+++ b/templates/logs_view.html
@@ -21,7 +21,7 @@
             <a class="nav-link {% if request.path == url_for('reportes') %}active{% endif %}" href="{{ url_for('reportes') }}">Reportes</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link {% if request.path == url_for('alerts') %}active{% endif %}" href="{{ url_for('alerts') }}">Alertas</a>
+            <a class="nav-link {% if request.path == url_for('alertas') %}active{% endif %}" href="{{ url_for('alertas') }}">Alertas</a>
         </li>
     </ul>
 </div>
