--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('index') }}">Recoleccion de logs</a>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('alerts') }}">Alertas</a>
+                    <a class="nav-link" href="{{ url_for('alertas') }}">Alertas</a>
                 </li>
                 
                 <li class="nav-item">
