--- a/templates/reportes/layout.html
+++ b/templates/reportes/layout.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Mi App{% endblock %}</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>{% block title %}Log Viewer{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    {% block extra_head %}{% endblock %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">ASO</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
+        <div class="container">
+                <span class="navbar-brand titulo">Analizador de Logs - FTP & Apache</span>            
+        
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/reportes">Reportes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/alertas">Alertas</a>
-                    </li>
-                </ul>
-            </div>
+            
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="nav">
+               
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('index') }}">Recoleccion de logs</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('alertas') }}">Alertas</a>
+                </li>
+                
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('reportes') }}">Reportes</a>
+                </li>
+                
+            </ul>
         </div>
+        
+        <form action="{{ url_for('clear_database_route') }}" method="POST">
+        <button type="submit" class="btn btn-danger salir">Salir</button>
+        </form>
     </nav>
 
     <div class="container-fluid" style="max-width: 80%;">
