--- a/templates/partials/reportes_ftp.html
+++ b/templates/partials/reportes_ftp.html
@@ -1,3 +1,4 @@
+        <h5>Reportes de FTP</h5><button onclick="exportarExcel('vsftpd')" class="btn btn-success">Descargar</button>
         <h5 class="mt-4 text-center">Conteo de entradas</h5>
 
         <div class="bg-white p-3 rounded shadow-sm mb-4 text-center" style="overflow-x: auto;">
@@ -37,4 +38,4 @@
         {% else %}
         <p class="text-muted">No se encontraron resultados.</p>
         {% endif %}
-      
+
