--- a/templates/partials/reportes_apache.html
+++ b/templates/partials/reportes_apache.html
@@ -1,1 +1,50 @@
-<h5>Logs del servidor Apache</h5>
+
+
+        <h5>Logs del servidor Apache</h5><button onclick="exportarExcel('apache')" class="btn btn-success">Descargar</button>
+        <h5 class="mt-4 text-center">Conteo de entradas</h5>
+
+        <div class="bg-white p-3 rounded shadow-sm mb-4 text-center" style="overflow-x: auto;">
+          <img src="{{ resultados['g1'] }}" class="img-fluid" alt="Gráfico de logs FTP">
+        </div>
+
+
+        <h5 class="mt-4">Tabla de logs FTP</h5>
+
+        {% if resultados['tabla'] %}
+        <div class="bg-white shadow-sm rounded p-3" style="max-height: 500px; overflow: scroll;">
+          <table class="table table-bordered table-striped">
+            <thead>
+              <tr>
+                <th>IP</th>
+                <th>Fecha y hora</th>
+                <th>Metodo</th>
+                <th>Ruta</th>
+                <th>Protocolo</th>
+                <th>Bytes enviados</th>
+                <th>Referencia</th>
+                <th>Cliente</th>
+                <th>Tiempo de Respuesta</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for fila in resultados['tabla'] %}
+              <tr>
+                
+                <td>{{fila['ip']}}</td>
+                <td>{{fila['fecha_hora']}}</td>
+                <td>{{fila['metodo']}}</td>
+                <td>{{fila['ruta']}}</td>
+                <td>{{fila['protocolo']}}</td>
+                <td>{{fila['bytes_enviados']}}</td>
+                <td>{{fila['referer']}}</td>
+                <td>{{fila['user_agent']}}</td>
+                <td>{{fila['tiempo_respuesta']}}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        {% else %}
+        <p class="text-muted">No se encontraron resultados.</p>
+        {% endif %}
+
