--- a/templates/partials/reportes_xfer.html
+++ b/templates/partials/reportes_xfer.html
@@ -1,4 +1,4 @@
-<h5 class="mt-4 text-center">Conteo de entradas</h5>
+<h5 class="mt-4 text-center">Conteo de entradas</h5><button onclick="exportarExcel('xfer')" class="btn btn-success">Descargar</button>
         <div class="bg-white p-3 rounded shadow-sm mb-4 text-center" style="overflow-x: auto;">
           <img src="{{ resultados['g1'] }}" class="img-fluid" alt="Gráfico de logs FTP">
         </div>
